been obsoleted.

*** `calendar-next-time-zone-transition', `time-add', and
`time-subtract' no longer return time values in the obsolete and
undocumented integer-pair format.  Instead, they return a list of two
integers.

+++
** New function `set-binary-mode' allows to switch a standard stream
of the Emacs process to binary I/O mode.

** Miscellaneous name change

For consistency with the usual Emacs spelling, the Lisp variable
`hfy-optimisations' has been renamed to `hfy-optimizations'.
The old name should still work, as an obsolescent alias.


* Changes in Frames and Windows Code in Emacs 25.1

+++
** Emacs can now draw horizontal scroll bars on some platforms that
provide toolkit scroll bars, namely Gtk+, Lucid, Motif and Windows.
Horizontal scroll bars are turned off by default.
*** New function `horizontal-scroll-bars-available-p' telling whether
    horizontal scroll bars are available on the underlying system.
*** New mode `horizontal-scroll-bar-mode' to toggle horizontal scroll
    bars on all existing and future frames.
*** New function `toggle-horizontal-scroll-bar' to toggle horizontal
    scroll bars on the selected frame.
*** New frame parameters `horizontal-scroll-bars' and
    `scroll-bar-height' to set horizontal scroll bars and their height
    for individual frames and in `default-frame-alist'.
*** New functions `frame-scroll-bar-height' and
    `window-scroll-bar-height' return the height of horizontal scroll
    bars on a specific frame or window.
*** `set-window-scroll-bars' now accepts five parameters where the last
    two specify height and type of the window's horizontal scroll bar.
*** `window-scroll-bars' now returns type and sizes of horizontal scroll
    bars too.
*** New buffer-local variables `horizontal-scroll-bar' and
    `scroll-bar-height'.

+++
** The height of a frame's menu and tool bar are no longer counted in the
frame's text height.  This means that the text height stands only for